# uv-tui

./: AGENT.md  LICENSE  README.md  config.toml  main.py  pyproject.toml  uv-tui.css  uv_tui.py
jinja/: README.md.jinja  pyproject.toml.jinja
src/uv_tui/: __init__.py
src/uv_tui/app/: read_packages.py
src/uv_tui/config/: __init__.py  __init__.py.jinja  log.py
src/uv_tui/setup/: __init__.py
static/json/: packages.json
uv_tui/: __init__.py  __main__.py  app.py  config.py  dialogs.py  models.py  screens.py  uv_executor.py  widgets.py
