[project]
name = "uv-tui"
version = "0.1.0"
description = "A TUI for managing uv projects."
readme = "README.md"
authors = [
    { name = "Max Ludden", email = "dev@maxludden.com" }
]
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.10.6",
    "rich>=13.9.4",
    "rich-gradient>=0.2.0",
    "textual>=2.1.2",
    "toml>=0.10.2",
    "types-toml>=0.10.8.20240310",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
ignore = [
    'F401',  # Unused import
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
]
